[project]
name = "nsfw-image-classifire"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.0",
    "pydantic>=2.13.3",
    "python-multipart>=0.0.26",
    "seqeval>=1.2.2",
    "timm>=1.0.26",
    "uvicorn>=0.44.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
